style(scrollbar): 스크롤바 커스텀

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/src/index.css" rel="stylesheet" />
     <title>markcloud-assignment</title>
   </head>
-  <body>
+  <body class="scrollbar">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
