chore(SEO): helmet 라이브러리를 사용해 SEO 최적화, README 수정

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -8,8 +8,11 @@
       href="https://www.markcloud.co.kr/favicon.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="다국가 상표 검색 서비스 - 한국, 미국 등 여러 국가의 상표 데이터를 통합 검색하고 비교 분석" />
+    <meta name="keywords" content="상표 검색, 상표 등록, 출원번호 검색, 한국 상표, 미국 상표" />
+    <meta name="author" content="MarkCloud" />
     <link href="/src/index.css" rel="stylesheet" />
-    <title>markcloud-assignment</title>
+    <title>다국가 상표 검색 서비스 | MarkCloud</title>
   </head>
   <body class="scrollbar">
     <div id="root"></div>
